# bcgov-arches-common

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  eslint.config.mjs  gettext.config.js  manage.py  package.json  pyproject.toml  tsconfig.json  vitest.config.mts  vitest.setup.mts
.github/: github.env
.github/actions/build-and-test-branch/: action.yml
.github/actions/run-release-prep-script/: release_prep.py
.github/workflows/: main.yml  release_deploy.yml  release_deploy_common.yml  release_prep.yml  release_prep_common.yml
arches_common/: apps.py  celery.py  settings.py
arches_common/functions/: unique_boolean_value.py
arches_common/management/commands/: bc_reindex_database.py  clear_mvt_cache.py  es_admin.py
arches_common/migrations/operations/: privileged_sql.py
arches_common/search_components/: bc_map_filter.py
arches_common/util/: graph_lookup.py  mvt_tiler_common.py  mvt_tiler_core.py
arches_common/util/auth/: auth_required_middleware.py  backends.py
arches_common/views/: mvt_base.py  mvt_core.py
bcgov_arches_common/: apps.py  celery.py  hosts.py  settings.py  urls.py  wsgi.py
bcgov_arches_common/functions/: abstract_primary_descriptors.py  unique_boolean_value.py
bcgov_arches_common/management/commands/: bc_reindex_database.py  create_node_alias_packages.py
bcgov_arches_common/media/css/: arches_common.css  bc_index.css  map_legend_common.css  project.css
bcgov_arches_common/migrations/: 154_fix_checkbox_boolean_defaultconfig.py  2025-02-07_create_concept_functions.py
bcgov_arches_common/migrations/operations/: privileged_sql.py
bcgov_arches_common/migrations/util/: migration_util.py
bcgov_arches_common/search/: displayname_es_values.py
bcgov_arches_common/src/bcgov_arches_common/: api.ts  constants.ts  declarations.d.ts  routes.ts  types.ts  validation-utils.ts
bcgov_arches_common/templates/: arches_urls.htm  unauthorized.htm
bcgov_arches_common/util/: bc_primary_descriptors_function.py  graph_lookup.py  mvt_tiler_common.py  mvt_tiler_core.py  pkg_util.py
bcgov_arches_common/util/auth/: oauth_client.py  (+2 more)
bcgov_arches_common/views/: auth.py  base.py  map.py  outbound_proxy_mixin.py  search.py
docs/: releasing.md
tests/: test_settings.py
tests/functions/: test_abstract_primary_descriptors.py
tests/search_indexes/: sample_index_tests.py
tests/views/: base_tests.py  edit_log_tests.py  outbound_proxy_mixin_tests.py  search_tests.py
webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
webpack/webpack-utils/: build-filepath-lookup.js
(+141 files in other folders)
