[build-system]
requires = [ "setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "bcgov-arches-common"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.11"
authors = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "arches @ git+https://github.com/bcgov/arches@stable/8.0.10_bcgov_12578_12377_12616",
    "arches-component-lab",
    "authlib",
]
dynamic = []

[project.license]
text = "GNU AGPL3"

[project.optional-dependencies]
dev = [ "black==24.4.2", "coverage", "django-silk==5.1.0", "livereload", "pre-commit==3.8.0", "sst",]

[tool.setuptools]
packages = [ "bcgov_arches_common",]
